welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: type mismatch;
 found   : Unit
 required: Boolean
if (B=2){ return true;}else{return false;}
     ^Program:10: error: type mismatch;
 found   : Unit
 required: Boolean
do{
^