welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var B :Int=0;
if (estSurBiscuit){B=B+1}
def vuBiscuit():Boolean ={
for(x<-1 to 7){avance();}
for(x<-1 to 7){recule();}
if (B=2){ return true;}else{return false;}
}
do{
gauche();
recule();
droite();
}while(vuBiscuit==true)
}